# stm32f042_cmsis_meson

./: README.md  cross.ini  meson.build
Drivers/CMSIS/Device/ST/STM32F0xx/Include/: stm32f0xx.h
src/: main.c
